# fractal-forge

./: .gitignore  CLAUDE.md  batch_cinematic_test.py  batch_overnight.py  batch_sample_content.py  batch_wallpapers.py  generate_wallpapers.py  launch_viewer.ps1  pyproject.toml  test_deep_zoom.py  test_hdr_wallpapers.py
docs/: CHANNEL_GUIDE.md  DEEP_RESEARCH_PROMPT.md  DEEP_RESEARCH_RESULTS.md  PROJECT_CHRONICLE.md  SPRINT_ALPHA_1_1.md  SPRINT_DEEP_ZOOM_PHASE1.md  SPRINT_TEXTURE_RENDERING.md  WORK_TRACKER.md
presets/: antenna_deep.json  burning_ship_antenna_zoom.json  burning_ship_armada_zoom.json  burning_ship_full_zoom.json  deep_showcase.json  elephant_valley.json  julia_dendrite_zoom.json  julia_dragon_zoom.json  julia_rabbit_zoom.json  julia_siegel_zoom.json  julia_spiral_zoom.json  minibrot_228_dive.json  minibrot_hunt.json  misiurewicz_spiral_dive.json  optimized_1080p.json  seahorse_dive.json  seahorse_electric.json  seahorse_fire.json  spiral_nebula.json  template.json  triple_spiral.json
src/fractalforge/: __init__.py  config.py
src/fractalforge/artist/: __init__.py  easing.py  palette.py  path_preview.py  postprocess.py  spline.py  zoompath.py
src/fractalforge/cli/: __init__.py  main.py
src/fractalforge/engine/: __init__.py  bla.py  bla_kernel.py  burning_ship.py  coloring.py  deep_kernel.py  floatexp.py  julia.py  mandelbrot.py  newton.py  perturbation.py  postprocess.py  precision.py
src/fractalforge/viewer/: app.py  (+8 more)
tests/: test_bla_validity.py  test_deep_groundtruth.py  test_deep_video.py  test_floatexp.py  test_julia_pt.py  test_orbit_cache.py
(+11 files in other folders)
