[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractalforge"
version = "0.1.0"
description = "GPU-accelerated fractal zoom renderer for creating elegant, long-form fractal zoom videos"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numba>=0.58.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "ffmpeg-python>=0.2.0",
    "mpmath>=1.3.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
preview = [
    "pygame>=2.5.0",
]

[project.scripts]
fractalforge = "fractalforge.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
